--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ anyio==4.3.0
 azure-core==1.30.0
 azure-data-tables==12.5.0
 azure-functions==1.18.0
+azure-identity==1.15.0
+azure-storage-blob==12.19.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 courlan==1.0.0
+cryptography==42.0.5
 dateparser==1.2.0
 distro==1.9.0
 h11==0.14.0
@@ -17,10 +21,16 @@ isodate==0.6.1
 jusText==3.0.0
 langcodes==3.3.0
 lxml==5.1.0
+msal==1.27.0
+msal-extensions==1.1.0
 multidict==6.0.5
 openai==1.12.0
+packaging==23.2
+portalocker==2.8.2
+pycparser==2.21
 pydantic==2.6.1
 pydantic_core==2.16.2
+PyJWT==2.8.0
 python-dateutil==2.8.2
 python-telegram-bot==20.8
 pytz==2024.1
